<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rgProf"
        android:layout_width="274dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etAnosInstituicaoHorasAula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdade">

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="134dp"
            android:layout_height="48dp"
            android:text="@string/rbTitular" />

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="139dp"
            android:layout_height="48dp"
            android:text="@string/rbHorista" />
    </RadioGroup>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="277dp"
        android:layout_height="0dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etMatricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMatricula"
        android:layout_width="276dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/etMatricula"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etIdade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etIdade"
        android:layout_width="273dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/etIdade"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/rgProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMatricula" />

    <EditText
        android:id="@+id/etAnosInstituicaoHorasAula"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etSalarioValorHoraAula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgProf" />

    <EditText
        android:id="@+id/etSalarioValorHoraAula"
        android:layout_width="373dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnosInstituicaoHorasAula" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/btnCalc"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalarioValorHoraAula" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="21dp"
        android:text="KELVIN SANTOS GUIMARAES - RA:	1110482313029"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="22dp" />

</androidx.constraintlayout.widget.ConstraintLayout>